fixed gap

--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        padding: 50px;
+        padding: 0 50px;
     }
 
     .card {
